# keyman

./: README.md  package-lock.json  package.json
.github/actions/build-binary-packages/: action.yml
.github/workflows/: deb-packaging.README.md  deb-packaging.yml
common/core/desktop/src/kmx/: kmx_capslock.cpp  kmx_processevent.cpp
common/core/desktop/tests/unit/kmx/: kmx.cpp  kmx_test_keyboard.cpp  kmx_test_keyboard.hpp  meson.build
common/web/sentry-manager/: package.json
common/web/tslib/: package.json
common/web/types/: package.json
core/include/keyman/: keyman_core_api.h
core/src/: km_core_keyboard_api.cpp  meson.build  wasm.cpp
core/tests/unit/: km_core_keyboard_api.tests.cpp  meson.build
core/tools/ldml-const-builder/: build.sh
developer/src/kmc/: package.json
developer/src/kmc-ldml/: package.json
developer/src/kmc-model/: package.json
developer/src/server/: package.json
linux/debian/: libkeymancore.symbols
linux/debian/tests/: test-build
linux/ibus-keyman/: configure.ac
linux/ibus-keyman/src/: Makefile.am  engine.c  keymanutil.c  keymanutil.h
linux/ibus-keyman/src/test/: keymanutil_tests.c
linux/ibus-keyman/test/: README.md  keypress_actions.py  runtests.sh  test_ibus_keyman.py
linux/ibus-keyman/tests/: Makefile.am  ibusimcontext.c  ibusimcontext.h  json.cpp  keyboard.cpp  keyboard_installer.cpp  keyboard_installer.hpp  kmx_actions.cpp  kmx_actions.h  kmx_base.h  kmx_capslock.cpp  kmx_consts.cpp  kmx_context.cpp  kmx_context.h  kmx_debug.cpp  kmx_debugger.cpp  kmx_debugger.h  kmx_environment.cpp  kmx_environment.h  kmx_file.cpp  kmx_file.h  kmx_modifiers.cpp  kmx_options.cpp  kmx_options.h  kmx_processevent.cpp  kmx_processevent.h  kmx_processor.cpp  kmx_processor.hpp  kmx_test_keyboard.cpp  kmx_test_keyboard.hpp  kmx_xstring.cpp  kmx_xstring.h  mock_client.py  mock_engine.py  option.cpp  run-tests.sh  state.cpp  test_ibus_keyman.py  testenvironment.cpp  testenvironment.hpp  (+5 more)
linux/keyman-config/keyman_config/: gnome_keyboards_util.py
linux/scripts/: deb-packaging.sh  reconf.sh
web/: build.sh  package.json
web/src/app/browser/src/: hardwareEventKeyboard.ts
web/src/engine/core-processor/src/: core-factory.ts  core-processor.ts  index.ts
web/src/engine/keyboard/src/keyboards/: keyboardLoaderBase.ts
web/src/engine/keyboard/src/keyboards/loaders/: domKeyboardLoader.ts  nodeKeyboardLoader.ts
web/src/engine/main/src/: keymanEngine.ts
web/src/engine/main/src/headless/: inputProcessor.ts
web/src/test/auto/dom/: web-test-runner.config.mjs
web/src/test/auto/dom/cases/core-processor/: basic.spec.ts
